--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ border: 1px solid #a2a9b1;
 </div>
 
 <!-- Anonymous user warning banner -->
-<div id="anonymousWarning" class="hidden" style="padding: 15px; border-bottom: 1px solid #a2a9b1;">
+<div id="anonymousWarning" class="hidden" style="padding: 15px;">
   <div class="cdx-message cdx-message--warning">
     <span class="cdx-message__icon"></span>
     <div class="cdx-message__content">
