--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ border: 1px solid #a2a9b1;
   
 <!-- For anonymous users -->
 <span id="createAccountBtn" style="display: none; cursor: pointer; color: #007bff;" onclick="showCreateAccountFromAnonymous()">Create account</span>
-<span id="loginBtn" style="display: none; cursor: pointer; color: #007bff;" onclick="showLoginOverlay()">Login</button>
+<span id="loginBtn" style="display: none; cursor: pointer; color: #007bff;" onclick="showLoginOverlay()">Login</span>
   
 <!-- For registered users -->
 <span id="changePasswordBtn" style="display: none; cursor: pointer; color: #007bff;" onclick="showChangePasswordPopup()" title="Click to change password">Change password</span>
